updated navigation link for announcements page.

--- a/packages/custom/announcements/public/views/index.html
+++ b/packages/custom/announcements/public/views/index.html
@@ -1,7 +1,7 @@
 <div data-ng-controller="AnnouncementsController" data-ng-init="defaultShow()">
   <h2>
       Announcements
-      <a class="btn" href="/#!/announcements/create">
+      <a class="btn" href="/#!/announcements/create" data-ng-click="open()">
           <i class="glyphicon glyphicon-plus-sign"></i>
       </a>
   </h2>
