--- a/packages/custom/announcements/public/views/create.html
+++ b/packages/custom/announcements/public/views/create.html
@@ -1,36 +1,37 @@
-<!--<div data-ng-init="create()">-->
-    <!--data-ng-controller="ModalDemoCtrl"<script type="text/ng-template" id="myModalContent.html">-->
-        <!--<form name="announcementForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(announcementForm.$valid)" novalidate>-->
-            <!--<div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsTitle.$invalid }">-->
-                <!--<label mean-token="'create-title'" class="col-md-3 control-label">Title</label>-->
-                <!--<label class="col-md-3 control-label">Title</label>-->
-                <!--<div class="col-md-9">-->
-                    <!--<input name="newsTitle" type="text" class="form-control" data-ng-model="newsTitle" id="newsTitle" placeholder="Title" required>-->
-                    <!--<div data-ng-show="submitted && announcementForm.title.$invalid" class="help-block">-->
-                        <!--<p data-ng-show="announcementForm.newsTitle.$error.required">Title is required</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+<div data-ng-controller="ModalDemoCtrl" data-ng-init="create()">
+    <script type="text/ng-template" id="myModalContent.html">
+        <form name="announcementForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(announcementForm.$valid)" novalidate>
+            <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsTitle.$invalid }">
+                <label mean-token="'create-title'" class="col-md-3 control-label">Title</label>
+                <label class="col-md-3 control-label">Title</label>
+                <div class="col-md-9">
+                    <input name="newsTitle" type="text" class="form-control" data-ng-model="newsTitle" id="newsTitle" placeholder="Title" required>
+                    <div data-ng-show="submitted && announcementForm.title.$invalid" class="help-block">
+                        <p data-ng-show="announcementForm.newsTitle.$error.required">Title is required</p>
+                    </div>
+                </div>
 
-            <!--</div>-->
-            <!--<div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsBody.$invalid }">-->
-                <!--<label mean-token="'create-content'" for="content" class="col-md-3 control-label">Content</label>-->
-                <!--<label class="col-md-3 control-label">Content</label>-->
-                <!--<div class="col-md-9">-->
-                    <!--<textarea name="newsBody" data-ng-model="newsBody" id="newsBody" cols="30" rows="10" placeholder="Content" class="form-control" required></textarea>-->
-                    <!--<div data-ng-show="submitted && articleForm.content.$invalid" class="help-block">-->
-                        <!--<p data-ng-show="announcementForm.newsBody.$error.required">Content is required</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
+            </div>
+            <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsBody.$invalid }">
+                <label mean-token="'create-content'" for="newsBody" class="col-md-3 control-label">Content</label>
+                <label class="col-md-3 control-label">Content</label>
+                <div class="col-md-9">
+                    <textarea name="newsBody" data-ng-model="newsBody" id="newsBody" cols="30" rows="10" placeholder="Content" class="form-control" required></textarea>
+                    <div data-ng-show="submitted && articleForm.content.$invalid" class="help-block">
+                        <p data-ng-show="announcementForm.newsBody.$error.required">Content is required</p>
+                    </div>
+                </div>
+            </div>
 
-        <!--<div class="modal-footer">-->
-            <!--<button type="submit" class="btn btn-primary">Create</button>-->
-            <!--<button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>-->
-        <!--</div>-->
-        <!--</form>-->
-    <!--</script>-->
-<!--</div>-->
+        <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Create</button>
+            <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
+        </div>
+        </form>
+    </script>
+</div>
 
+<!--
 <section data-ng-controller="AnnouncementsController">
     <form name="announcementForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(announcementForm.$valid)" novalidate>
         <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsTitle.$invalid }">
@@ -58,4 +59,4 @@
             </div>
         </div>
     </form>
-</section>
+</section>-->
