--- a/packages/users/public/views/forgot-password.html
+++ b/packages/users/public/views/forgot-password.html
@@ -1,14 +1,23 @@
 <div data-ng-controller="ForgotPasswordCtrl">
   <div class="alert alert-{{response.status}} animated fadeIn" ng-show="response.message">{{response.message}}</div>
-  <h1>Forgot Password</h1>
+    <h2 align="center"><font face="impact" size="15">forgot your password</font></h2>
+    <hr>
   <form ng-submit="forgotpassword()" class="forgot-password form-horizontal">
     <div class="form-group">
-      <label for="email" class="forgot-email"> Enter your email address or username below and we will send you password reset instructions.</label>
+      <label for="email" class="forgot-email"></label>
+        <h2 align="center"><font size="3">Please enter the email address you use to log in to your account.</font></h2>
+        <h2 align="center"><font size="3">We'll send you an email with instructions to choose a new password.</font></h2>
+        <br>
       <div class="form-group">
-        <input id="text" type="text" name="text" class="form-control" ng-model="text"/>
+          <p align="center"></p>
+        <input id="text" type="text" placeholder="email" size="200" name="text" class="form-control" ng-model="text"/>
+          </p>
       </div>
-      <div class="submit">
-        <button type="submit" class="btn btn-primary">Reset Password</button>
+      <div class="continue">
+          <p align="center">
+              <button style="background-color:white; border-width:2px; border-color:red; height:50px; width:600px;"
+                      type="submit" class="btn btn-small btn-block btn"><font face="impact" size="5">continue</font></button>
+          </p>
       </div>
     </div>
   </form>
