--- a/packages/custom/announcements/public/views/index.html
+++ b/packages/custom/announcements/public/views/index.html
@@ -5,10 +5,10 @@
           <i class="glyphicon glyphicon-plus-sign"></i>
       </a>
   </h2>
-    <select name="sort" data-ng-model="sort" id="sort">
+<!--    <select name="sort" data-ng-model="sort" id="sort">
         <option value="10perPage">10 per page</option>
         <option value="20perPage">20 per page</option>
-    </select>
+    </select>-->
     <div class="container">
         <div class="col-md-12" data-ng-repeat="announcement in announcements">
             <h3>{{announcement.newsTitle}}</h3>
