--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -5,43 +5,237 @@
   <div class="alert alert-danger animated fadeIn" ng-show="usernameError">{{usernameError}}</div>
   <div class="alert alert-danger animated fadeIn" ng-show="emailError">{{emailError}}</div>
 
-  <h1>Register</h1>
   <form ng-submit="register()" class="signup form-horizontal">
-    <div class="form-group">
-      <label for="name" class="col-md-4 control-label">Full Name</label>
-      <div class="col-md-8">
-        <input id="name" type="text" name="name" placeholder="Full name" class="form-control" ng-model="user.name"/>
+      <div class="container">
+          <div class="row clearfix">
+              <form class="form-horizontal">
+                  <fieldset>
+
+                      <h2 align="center"><font face="impact" size="20">account</font></h2>
+
+                      <!-- First Name -->
+                      <div align="left" class="form-group">
+                          <label class="col-md-2 control-label" for="fname">First Name:</label>
+                          <div class="col-md-4">
+                              <input id="fname" name="fname" type="text" class="form-control input-md" ng-model="user.fname">
+                          </div>
+
+                          <!-- First Name Checkbox -->
+                          <div class="col-md-1">
+                              <input type="checkbox">
+                          </div>
+                          <div class="form-group">
+                              <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
+                                      type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">edit garage</font></button>
+                          </div>
+                      </div>
+
+                      <!-- Last Name -->
+                      <div class="form-group">
+                          <label class="col-md-2 control-label" for="lname">Last Name:</label>
+                          <div class="col-md-4">
+                              <input id="lname" name="lname" type="text" class="form-control input-md" ng-model="user.lname">
+                          </div>
+                          <!-- LName Checkbox -->
+                          <div class="col-md-1">
+                              <input type="checkbox">
+                          </div>
+                          <div class="form-group">
+                              <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
+                                      type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">* garage</font></button>
+                          </div>
+                      </div>
+
+                      <!-- Email -->
+                      <div class="form-group">
+                          <label for="email" class="col-md-2 control-label">Email:</label>
+                          <div class="col-md-4">
+                              <input id="email" type="email" name="email" class="form-control" ng-model="user.email"/>
+                          </div>
+                          <div class="col-md-1">
+
+                          </div>
+                          <div class="form-group">
+                              <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
+                                      type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">delete account</font></button>
+                          </div>
+                      </div>
+
+                      <!-- Password -->
+                      <div class="form-group">
+                          <label for="password" class="col-md-2 control-label">Password:</label>
+                          <div class="col-md-4">
+                              <input id="password" type="text" name="password" class="form-control" ng-model="user.password"/>
+                          </div>
+                      </div>
+
+                      <!-- Phone and Birthday -->
+                      <div class="form-group">
+                          <label for="phone" class="col-md-2 control-label">Phone:</label>
+                          <div class="col-md-2">
+                              <input id="phone" type="text" name="phone" class="form-control" ng-model="user.phone"/>
+                          </div>
+                          <label>Birthday:  Month:</label>
+                          <select name="dobmonth" ng-model="user.month">
+                              <option value="January">January</option>
+                              <option value="February">February</option>
+                              <option value="March">March</option>
+                              <option value="April">April</option>
+                              <option value="May">May</option>
+                              <option value="June">June</option>
+                              <option value="July">July</option>
+                              <option value="August">August</option>
+                              <option value="September">September</option>
+                              <option value="October">October</option>
+                              <option value="November">November</option>
+                              <option value="December">December</option>
+                          </select>
+                          <label>Day:</label>
+                          <select name="dobday" ng-model="user.day">
+                              <option value="1">1</option><option value="2">2</option><option value="3">3</option>
+                              <option value="4">4</option><option value="5">5</option><option value="6">6</option>
+                              <option value="7">7</option><option value="8">8</option><option value="9">9</option>
+                              <option value="10">10</option><option value="11">11</option><option value="12">12</option>
+                              <option value="13">13</option><option value="14">14</option><option value="15">15</option>
+                              <option value="16">16</option><option value="17">17</option><option value="18">18</option>
+                              <option value="19">19</option><option value="20">20</option><option value="21">21</option>
+                              <option value="22">22</option><option value="23">23</option><option value="24">24</option>
+                              <option value="25">25</option><option value="26">26</option><option value="27">27</option>
+                              <option value="28">28</option><option value="29">29</option><option value="30">30</option>
+                              <option value="31">31</option>
+                          </select>
+                          <label>Year:</label>
+                          <select name="dobyear" ng-model="user.year">
+                              <option value="1996">1996</option><option value="1995">1995</option><option value="1994">1994</option>
+                              <option value="1993">1993</option><option value="1992">1992</option><option value="1991">1991</option>
+                              <option value="1990">1990</option><option value="1989">1989</option><option value="1988">1988</option>
+                              <option value="1987">1987</option><option value="1986">1986</option><option value="1985">1985</option>
+                              <option value="1984">1984</option><option value="1983">1983</option><option value="1982">1982</option>
+                              <option value="1981">1981</option><option value="1980">1980</option><option value="1979">1979</option>
+                              <option value="1978">1978</option><option value="1977">1977</option><option value="1976">1976</option>
+                              <option value="1975">1975</option><option value="1974">1974</option><option value="1973">1973</option>
+                              <option value="1972">1972</option><option value="1971">1971</option><option value="1970">1970</option>
+                              <option value="1969">1969</option><option value="1968">1968</option><option value="1967">1967</option>
+                              <option value="1966">1966</option><option value="1965">1965</option><option value="1964">1964</option>
+                              <option value="1963">1963</option><option value="1962">1962</option><option value="1961">1961</option>
+                              <option value="1960">1960</option><option value="1959">1959</option><option value="1958">1958</option>
+                              <option value="1957">1957</option><option value="1956">1956</option><option value="1955">1955</option>
+                              <option value="1954">1954</option><option value="1953">1953</option><option value="1952">1952</option>
+                              <option value="1951">1951</option><option value="1950">1950</option><option value="1949">1949</option>
+                              <option value="1948">1948</option><option value="1947">1947</option><option value="1946">1946</option>
+                              <option value="1945">1945</option><option value="1944">1944</option><option value="1943">1943</option>
+                              <option value="1942">1942</option><option value="1941">1941</option><option value="1940">1940</option>
+                              <option value="1939">1939</option><option value="1938">1938</option><option value="1937">1937</option>
+                              <option value="1936">1936</option><option value="1935">1935</option><option value="1934">1934</option>
+                         </select>
+                      </div>
+
+                      <!-- City State and Zip -->
+                      <div class="form-group">
+                          <label class="col-md-2 control-label" for="city">City:</label>
+                          <div class="col-md-2">
+                              <input id="city" type="text" name="city" class="form-control" ng-model="user.city"/>
+                          </div>
+                          <div class="col-md-2">
+                              <label>State:</label>
+                          <select name="state" ng-model="user.state">
+                                  <option value="AL">AL</option><option value="AK">AK</option><option value="AZ">AZ</option>
+                                  <option value="AR">AR</option><option value="CA">CA</option><option value="CO">CO</option>
+                                  <option value="CT">CT</option><option value="DE">DE</option><option value="FL">FL</option>
+                                  <option value="GA">GA</option><option value="HI">HI</option><option value="ID">ID</option>
+                                  <option value="IL">IL</option><option value="IN">IN</option><option value="IA">IA</option>
+                                  <option value="KS">KS</option><option value="KY">KY</option><option value="LA">LA</option>
+                                  <option value="ME">ME</option><option value="MD">MD</option><option value="MA">MA</option>
+                                  <option value="MI">MI</option><option value="MN">MN</option><option value="MS">MS</option>
+                                  <option value="MO">MO</option><option value="MT">MT</option><option value="NE">NE</option>
+                                  <option value="NV">NV</option><option value="NH">NH</option><option value="NJ">NJ</option>
+                                  <option value="NM">NM</option><option value="NY">NY</option><option value="NC">NC</option>
+                                  <option value="ND">ND</option><option value="OH">OH</option><option value="OK">OK</option>
+                                  <option value="OR">OR</option><option value="PA">PA</option><option value="RI">RI</option>
+                                  <option value="SC">SC</option><option value="SD">SD</option><option value="TN">TN</option>
+                                  <option value="TX">TX</option><option value="UT">UT</option><option value="VT">VT</option>
+                                  <option value="VA">VA</option><option value="WA">WA</option><option value="WV">WV</option>
+                                  <option value="WI">WI</option><option value="WY">WY</option>
+                              </select>
+                          </div>
+                          <div class="col-md-1">
+                              <label class="col-md-0 control-label" for="city">Zip:</label>
+                          </div>
+                          <div class="col-md-2">
+                          <input id="zip" type="text" name="zip" class="form-control" ng-model="user.zip"/>
+                      </div>
+                      </div>
+
+                      <!-- Driving Level -->
+                      <div class="form-group">
+                          <label class="col-md-3 control-label">Driving Level:</label>
+                          <select name="drivingLevel" ng-model="level">
+                              <option value="Novice">Novice</option>
+                              <option value="Intermediate">Intermediate</option>
+                              <option value="Expert">Expert</option>
+                          </select>
+                      </div>
+                  </fieldset>
+              </form>
+          </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="email" class="col-md-4 control-label">Email</label>
-      <div class="col-md-8">
-        <input id="email" type="email" name="email" placeholder="Email" class="form-control" ng-model="user.email"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="username" class="col-md-4 control-label">Username</label>
-      <div class="col-md-8">
-        <input id="username" type="text" name="username" placeholder="Username" class="form-control" ng-model="user.username"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="password" class="col-md-4 control-label">Password</label>
-      <div class="col-md-8">
-        <input id="password" type="password" name="password" placeholder="Password" class="form-control" ng-model="user.password"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="confirmPassword" class="col-md-4 control-label">Repeat Password</label>
-      <div class="col-md-8">
-        <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Password" class="form-control" ng-model="user.confirmPassword"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="col-md-offset-4 col-md-8">
-        <button type="submit" class="btn btn-primary">Sign up</button>&nbsp;
-        or&nbsp;<a ui-sref='auth.login' class="show-login">login</a>
-      </div>
-    </div>
   </form>
+
+  
+    <!-- Horizontal Line -->
+    <HR width="1200">
+
+    <form ng-submit="register()" class="signup form-horizontal">
+        <div class="container">
+            <div class="row clearfix">
+                <form class="form-horizontal">
+                    <fieldset>
+
+                        <h2 align="center"><font face="impact" size="20">emergency contact</font></h2>
+
+                        <!-- First Name -->
+                        <div align="left" class="form-group">
+                            <label class="col-md-2 control-label" for="icefname">First Name:</label>
+                            <div class="col-md-4">
+                                <input id="icefname" name="icefname" type="text" class="form-control input-md" ng-model="user.icefname">
+                            </div>
+                            <!-- Last Name -->
+                            <label class="col-md-2 control-label" for="icelname">Last Name:</label>
+                            <div class="col-md-4">
+                                <input id="icelname" name="icelname" type="text" class="form-control input-md" ng-model="user.icelname">
+                            </div>
+                        </div>
+
+                        <!-- Email -->
+                        <div align="left" class="form-group">
+                            <label class="col-md-2 control-label" for="iceemail">Email:</label>
+                            <div class="col-md-5">
+                                <input id="iceemail" name="iceemail" type="text" class="form-control input-md" ng-model="user.iceemail">
+                            </div>
+                        </div>
+
+                        <!-- Phone 1 -->
+                        <div align="left" class="form-group">
+                            <label class="col-md-2 control-label" for="icephone1">Phone 1:</label>
+                            <div class="col-md-2">
+                                <input id="icephone1" name="icephone1" type="text" class="form-control input-md" ng-model="user.icephone1">
+                            </div>
+                            <!-- Phone 2 -->
+                            <label class="col-md-2 control-label" for="icephone2">Phone 2:</label>
+                            <div class="col-md-2">
+                                <input id="icephone2" name="icephone2" type="text" class="form-control input-md" ng-model="user.icephone2">
+                            </div>
+                            <div class="col-md-2">
+                                <button style="background-color:white; border-width:2px; border-color:red; height:50px; width:200px;"
+                                        type="submit" class="btn btn-small btn-block btn"><font face="impact" size="5">submit</font></button>
+                                        <!-- &nbsp;or&nbsp;<a ui-sref='auth.login' class="show-login">login</a> -->
+                            </div>
+                        </div>
+
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+        </form>
+</div>
 </div>
