--- a/packages/users/public/views/register.html
+++ b/packages/users/public/views/register.html
@@ -22,7 +22,7 @@
 
                           <!-- First Name Checkbox -->
                           <div class="col-md-1">
-                              <input type="checkbox">
+                              <span title="Check to have your first name hidden from other users."><input type="checkbox"></span>
                           </div>
                           <div class="form-group">
                               <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
@@ -38,7 +38,7 @@
                           </div>
                           <!-- LName Checkbox -->
                           <div class="col-md-1">
-                              <input type="checkbox">
+                              <span title="Check to have your last name hidden from other users."><input type="checkbox"></span>
                           </div>
                           <div class="form-group">
                               <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
