Added paypal payment button to register event page. Removed modal controller from announcements.

--- a/packages/custom/events/public/views/register.html
+++ b/packages/custom/events/public/views/register.html
@@ -35,7 +35,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" data-ng-click="ok()"><INPUT TYPE="hidden" name="cmd" value="_xclick">Register</button>
+            <button class="btn btn-primary" data-ng-click="ok()"><img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="left" style="margin-right:7px;"></button>
             <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
         </div>
     <!--</script>-->
