--- a/packages/custom/announcements/public/views/create.html
+++ b/packages/custom/announcements/public/views/create.html
@@ -1,38 +1,7 @@
-<div data-ng-controller="ModalDemoCtrl" data-ng-init="create()">
-    <script type="text/ng-template" id="myModalContent.html">
-        <form name="announcementForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(announcementForm.$valid)" novalidate>
-            <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsTitle.$invalid }">
-                <label mean-token="'create-title'" class="col-md-3 control-label">Title</label>
-                <label class="col-md-3 control-label">Title</label>
-                <div class="col-md-9">
-                    <input name="newsTitle" type="text" class="form-control" data-ng-model="newsTitle" id="newsTitle" placeholder="Title" required>
-                    <div data-ng-show="submitted && announcementForm.title.$invalid" class="help-block">
-                        <p data-ng-show="announcementForm.newsTitle.$error.required">Title is required</p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsBody.$invalid }">
-                <label mean-token="'create-content'" for="newsBody" class="col-md-3 control-label">Content</label>
-                <label class="col-md-3 control-label">Content</label>
-                <div class="col-md-9">
-                    <textarea name="newsBody" data-ng-model="newsBody" id="newsBody" cols="30" rows="10" placeholder="Content" class="form-control" required></textarea>
-                    <div data-ng-show="submitted && articleForm.content.$invalid" class="help-block">
-                        <p data-ng-show="announcementForm.newsBody.$error.required">Content is required</p>
-                    </div>
-                </div>
-            </div>
-
-        <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Create</button>
-            <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
-        </div>
-        </form>
-    </script>
+<div class="modal-header">
+    <h1>Create Announcement</h1>
 </div>
-
-<!--
-<section data-ng-controller="AnnouncementsController">
+<div class="modal-body">
     <form name="announcementForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(announcementForm.$valid)" novalidate>
         <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsTitle.$invalid }">
             <label mean-token="'create-title'" class="col-md-3 control-label">Title</label>
@@ -59,4 +28,8 @@
             </div>
         </div>
     </form>
-</section>-->
+</div>
+<div class="modal-footer">
+    <button type="submit" class="btn btn-primary">Create</button>
+    <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
+</div>
