--- a/packages/custom/announcements/public/views/index.html
+++ b/packages/custom/announcements/public/views/index.html
@@ -1,15 +1,16 @@
 <div data-ng-controller="AnnouncementsController" data-ng-init="defaultShow()">
   <h2>
       Announcements
-      <a class="btn" href="/#!/announcements/create" data-ng-click="open()">
+      <a class="btn">
           <i class="glyphicon glyphicon-plus-sign"></i>
       </a>
   </h2>
+
 <!--    <select name="sort" data-ng-model="sort" id="sort">
         <option value="10perPage">10 per page</option>
         <option value="20perPage">20 per page</option>
     </select>-->
-    <div class="container">
+    <div class="container" >
         <div class="col-md-12" data-ng-repeat="announcement in announcements">
             <h3>{{announcement.newsTitle}}</h3>
             <p>{{announcement.newsBody}}</p>
@@ -28,5 +29,4 @@
         </div>
     </div>
 </div>
-
 
