--- a/packages/custom/events/public/views/create.html
+++ b/packages/custom/events/public/views/create.html
@@ -1,10 +1,33 @@
 <section data-ng-controller="EventsController">
   <p class="page-title">create a new event</p>
 
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+    Launch demo modal
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <form style="float:none; left:25%" name="eventForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(eventForm.$valid)" novalidate>
 
-    <div data-ng-controller="TracksController" class="form-group" ng-class="{ 'has-error' : submitted && articleForm.track.value == null }">
+   <!-- <div data-ng-controller="TracksController" class="form-group" ng-class="{ 'has-error' : submitted && articleForm.track.value == null }">
       <label class="col-md-3 control-label">Track</label>
       <div class="col-md-7">
         <select id="track" class="form-control glowing-border" data-ng-model="track" name="track">
@@ -14,15 +37,15 @@
           </div>
         </select>
       </div>
-    </div>
+    </div>-->
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.date.$invalid }">
-      <label for="date" class="col-md-3 control-label">Date</label>
+      <label for="eventStartDate" class="col-md-3 control-label">Date</label>
       <div class="col-md-4">
-        <input name="date" type="date" data-ng-model="date" id="date" placeholder="mm/dd/yyyy" class="form-control glowing-border" required>
+        <input name="eventStartDate" type="date" data-ng-model="eventStartDate" id="eventStartDate" placeholder="mm/dd/yyyy" class="form-control glowing-border" required>
       </div>
     </div>
-
+<!--
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.price.$invalid }">
       <label for="price" class="col-md-3 control-label">Price</label>
       <div class="col-md-3">
@@ -93,9 +116,9 @@
           <option value="WV">West Virginia
           <option value="WI">Wisconsin
           <option value="WY">Wyoming
-        </SELECT>
+        </SELECT>-->
         <!--<input name="state" type="text" data-ng-model="state" id="state" placeholder="State" class="form-control glowing-border" required>-->
-      </div>
+     <!-- </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.novice.$invalid }">
@@ -139,6 +162,7 @@
         <input name="glink" type="url" data-ng-model="glink" id="glink" class="form-control glowing-border" placeholder="(optional)"></textarea>
       </div>
     </div>
+    -->
 
     <div class="form-group">
       <div class="col-md-offset-3 col-md-9">
