fixed typo in route and a bug in create function

--- a/packages/custom/events/public/views/upcoming.html
+++ b/packages/custom/events/public/views/upcoming.html
@@ -23,8 +23,7 @@
         </thead>
         <tbody>
         <tr data-ng-repeat="event in events | filter: searchText">
-            <!--<td>{{event.eventStartDate}}</td>-->
-            <td>{{event.date}}</td>
+            <td>{{event.eventStartDate}}</td>
             <td>{{event.track}}</td>
             <td>{{event.location}}</td>
             <td>{{event.novice}} :: {{event.intermediate}} :: {{event.advanced}}</td>
