--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -1,12 +1,58 @@
 
-<!--<section data-ng-controller="EventsController" data-ng-init="findOne()">
-    <span>{{event.eventStartDate | date:'medium'}}</span>
-</section> -->
-
-
 <section data-ng-controller="EventsController">
-   <h1>
-       {{eventD}}
-   </h1>
+    <h1>
+        {{eventD}}
+    </h1>
 
+    <div class="form-group">
+        <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
+                type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">update</font></button>
+    </div>
+    <div class="form-group">
+        <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
+                type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">cancel</font></button>
+    </div>
+    <div class="form-group">
+        <button style="background-color:white; border-width:2px; border-color:red; height:40px; width:200px;"
+                type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">track day calculator</font></button>
+    </div>
+    <div>
+        <table ng-table="tableParams" class="table">
+            <tr ng-model="eventer" ng-repeat="attendees in manifests">
+                <td data-title="'Event'" sortable="'event'">{{eventer.eventName}}</td>
+                <td data-title="'Date'" sortable="'date'">{{eventer.eventDate}}</td>
+                <td data-title="'State'" sortable="'state'">{{eventer.eventState}}</td>
+                <td data-title="'Event Status'" sortable="'status'">{{eventer.eventStatus}}</td>
+                <td data-title="'Cost'" sortable="'cost'">{{eventer.eventCost}}</td>
+                <td><form><button ng-submit="filterEvents()" type="submit" class="btn btn-small btn-block btn"><font face="impact" size="4">track day calculator</font></button></td>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <table ng-table="tableParams" class="table">
+            <tr ng-model="log" ng-repeat="log in logs">
+                <td data-title="''" >{{log.comment}}</td>
+
+            </tr>
+        </table>
+    </div>
+
+    <div class="container" ng-controller="AccordionCtrl">
+        <img class="center-block" src="/system/assets/img/logo.jpg" width="400" height="175" />
+        <label class="checkbox">
+            <input type="checkbox" ng-model="oneAtATime">
+            Open only one at a time
+        </label>
+        <accordion close-others="oneAtATime">
+            <accordion-group ng-repeat="group in groups" is-open="group.expanded">
+                <accordion-heading>
+                    <span class="glyphicon pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
+                    <span class="pull-left glyphicon-asterisk glyphicon-space"></span>
+                    <strong class="valign-middle">{{group.title}}</strong>
+                    <!--<span class="glyphicon glyphicon-remove-circle pull-right" style="color: red" ng-click="removeGroup(group)"></span>-->
+                </accordion-heading>
+                {{group.content}}
+            </accordion-group>
+        </accordion>
+    </div>
 </section>
