--- a/packages/system/public/views/index.html
+++ b/packages/system/public/views/index.html
@@ -1,6 +1,7 @@
 <section data-ng-controller="IndexController">
   <h1 mean-token="'home-default'">Welcome to Got Track Days!</h1>
-    <img src="/system/assets/img/logo.jpg" width="400" height="175" />
+    <img class="center-block" src="/system/assets/img/logo.jpg" width="400" height="175" />
+    <div data-ng-include="'announcements/views/index.html'"></div>
 </section>
 
 <!--<div ng-controller="CarouselCtrl">
