--- a/packages/custom/announcements/public/views/index.html
+++ b/packages/custom/announcements/public/views/index.html
@@ -1,15 +1,16 @@
-<div data-ng-controller="AnnouncementsController" data-ng-init="defaultShow()">
+<div >
   <h2>
       Announcements
-      <a class="btn">
-          <i class="glyphicon glyphicon-plus-sign"></i>
+      <a data-ng-controller="ModalController" data-ng-click="open()">
+          <i class="glyphicon glyphicon-plus-sign glyphlink-red"></i>
       </a>
   </h2>
-
 <!--    <select name="sort" data-ng-model="sort" id="sort">
         <option value="10perPage">10 per page</option>
         <option value="20perPage">20 per page</option>
     </select>-->
+</div>
+<div data-ng-controller="AnnouncementsController" data-ng-init="defaultShow()">
     <div class="container" >
         <div class="col-md-12" data-ng-repeat="announcement in announcements">
             <h3>{{announcement.newsTitle}}</h3>
