--- a/packages/custom/events/public/views/upcoming.html
+++ b/packages/custom/events/public/views/upcoming.html
@@ -5,12 +5,13 @@
                 <span class="input-group-addon">
                     <i class="glyphicon glyphicon-search"></i>
                 </span>
-                <input ng-model="searchText" type="search" class="text-right form-control glowing-border no-validate" placeholder="Search upcoming events"/></div>
+                <input ng-model="searchText" type="search" class="text-right form-control glowing-border no-validate" placeholder="Search upcoming events"/>
+            </div>
         </div>
         <div class="panel-title table-title">upcoming events <a href="#!/events/create"><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
     </div>
 
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover table-striped">
         <thead>
         <tr>
             <th>Date</th>
@@ -18,17 +19,17 @@
             <th>Location</th>
             <th>Spots Remaining<br><small>(Novice :: Intermediate :: Advanced)</small></th>
             <th>Price</th>
-            <th>Attend Event</th>
+            <th style="text-align: right">Attend Event</th>
         </tr>
         </thead>
         <tbody>
-        <tr data-ng-repeat="event in events | filter: searchText">
-            <td>{{event.eventStartDate}}</td>
-            <td>{{event.track}}</td>
-            <td>{{event.location}}</td>
-            <td>{{event.novice}} :: {{event.intermediate}} :: {{event.advanced}}</td>
-            <td>{{event.price | currency}}</td>
-            <td><button class="btn btn-default center-block">attend</button></td>
+        <tr class="clickable-row" data-ng-repeat="event in events" ng-click="showEvent(event)">
+            <td style="vertical-align:middle">{{event.eventStartDate}}</td>
+            <td style="vertical-align:middle">{{event.trackName}}</td>
+            <td style="vertical-align:middle">{{event.location}}</td>
+            <td style="vertical-align:middle">{{event.novice}} :: {{event.intermediate}} :: {{event.advanced}}</td>
+            <td style="vertical-align:middle">{{event.price | currency}}</td>
+            <td style="text-align: right"><button class="btn btn-default">attend</button></td></a>
         </tr>
         </tbody>
     </table>
