--- a/packages/custom/events/public/views/create.html
+++ b/packages/custom/events/public/views/create.html
@@ -4,139 +4,138 @@
 
   <form style="float:none; left:25%" name="eventForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(eventForm.$valid)" novalidate>
 
-    <div data-ng-controller="TracksController" data-ng-init="findAll()" class="form-group" ng-class="{ 'has-error' : submitted && eventForm.t.value == null }">
-      <label for="t" class="col-md-3 control-label">Track</label>
+    <div data-ng-controller="TracksController" data-ng-init="findAll()" class="form-group" ng-class="{ 'has-error' : submitted && eventForm.track.value == null }">
+      <label class="col-md-3 control-label">Track</label>
       <div class="col-md-7">
-        <select id="t" class="form-control glowing-border" name="t">
-          <option style="color:gray" value="" selected>Select a track</option>
+        <select name="track" class="form-control glowing-border" data-ng-model="track" required>
+          <option style="color:gray" value="">Select a track</option>
           <option data-ng-repeat="track in tracks" value="{{track.trackName}}">{{track.trackName}}</option>
         </select>
       </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.date.$invalid }">
-      <label for="date" class="col-md-3 control-label">Date</label>
+      <label class="col-md-3 control-label">Date</label>
       <div class="col-md-4">
-        <input name="date" type="date" id="date" placeholder="mm/dd/yyyy" class="form-control glowing-border" required>
+        <input name="date" type="date" data-ng-model="date" placeholder="mm/dd/yyyy" class="form-control glowing-border" required>
       </div>
     </div>
-    <!--
-        <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.price.$invalid }">
-          <label for="price" class="col-md-3 control-label">Price</label>
-          <div class="col-md-3">
-            <input name="price" type="number" data-ng-model="price" id="price" min="0" placeholder="Price" class="form-control glowing-border" required>
-          </div>
-        </div>
 
-        <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.city.$invalid }">
-          <label for="city" class="col-md-3 control-label">City</label>
-          <div class="col-md-5">
-            <input name="city" type="text" data-ng-model="city" id="city" placeholder="City" class="form-control glowing-border" required>
-          </div>
-        </div>
+    <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.price.$invalid }">
+      <label class="col-md-3 control-label">Price</label>
+      <div class="col-md-3">
+        <input name="price" type="number" data-ng-model="price" min="0" placeholder="Price" class="form-control glowing-border" required>
+      </div>
+    </div>
 
-        <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.state.value == null }">
-          <label for="state" class="col-md-3 control-label">State</label>
-          <div class="col-md-5">
-            <select id="state" class="form-control glowing-border" data-ng-model="state" name="state">
-              <option style="color:gray" value="" selected>Select a state
-              <option value="AL">Alabama
-              <option value="AK">Alaska
-              <option value="AZ">Arizona
-              <option value="AR">Arkansas
-              <option value="CA">California
-              <option value="CO">Colorado
-              <option value="CT">Connecticut
-              <option value="DE">Delaware
-              <option value="FL">Florida
-              <option value="GA">Georgia
-              <option value="HI">Hawaii
-              <option value="ID">Idaho
-              <option value="IL">Illinois
-              <option value="IN">Indiana
-              <option value="IA">Iowa
-              <option value="KS">Kansas
-              <option value="KY">Kentucky
-              <option value="LA">Louisiana
-              <option value="ME">Maine
-              <option value="MD">Maryland
-              <option value="MA">Massachusetts
-              <option value="MI">Michigan
-              <option value="MN">Minnesota
-              <option value="MS">Mississippi
-              <option value="MO">Missouri
-              <option value="MT">Montana
-              <option value="NE">Nebraska
-              <option value="NV">Nevada
-              <option value="NH">New Hampshire
-              <option value="NJ">New Jersey
-              <option value="NM">New Mexico
-              <option value="NY">New York
-              <option value="NC">North Carolina
-              <option value="ND">North Dakota
-              <option value="OH">Ohio
-              <option value="OK">Oklahoma
-              <option value="OR">Oregon
-              <option value="PA">Pennsylvania
-              <option value="RI">Rhode Island
-              <option value="SC">South Carolina
-              <option value="SD">South Dakota
-              <option value="TN">Tennessee
-              <option value="TX">Texas
-              <option value="UT">Utah
-              <option value="VT">Vermont
-              <option value="VA">Virginia
-              <option value="WA">Washington
-              <option value="DC">Washington D.C.
-              <option value="WV">West Virginia
-              <option value="WI">Wisconsin
-              <option value="WY">Wyoming
-            </SELECT>
+    <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.city.$invalid }">
+      <label class="col-md-3 control-label">City</label>
+      <div class="col-md-5">
+        <input name="city" data-ng-model="city" placeholder="City" class="form-control glowing-border" required>
+      </div>
+    </div>
+
+    <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.state.value == null }">
+      <label  class="col-md-3 control-label">State</label>
+      <div class="col-md-5">
+        <select name="state" class="form-control glowing-border" data-ng-model="state" required>
+          <option style="color:gray" value="">Select a state
+          <option value="AL">Alabama
+          <option value="AK">Alaska
+          <option value="AZ">Arizona
+          <option value="AR">Arkansas
+          <option value="CA">California
+          <option value="CO">Colorado
+          <option value="CT">Connecticut
+          <option value="DE">Delaware
+          <option value="FL">Florida
+          <option value="GA">Georgia
+          <option value="HI">Hawaii
+          <option value="ID">Idaho
+          <option value="IL">Illinois
+          <option value="IN">Indiana
+          <option value="IA">Iowa
+          <option value="KS">Kansas
+          <option value="KY">Kentucky
+          <option value="LA">Louisiana
+          <option value="ME">Maine
+          <option value="MD">Maryland
+          <option value="MA">Massachusetts
+          <option value="MI">Michigan
+          <option value="MN">Minnesota
+          <option value="MS">Mississippi
+          <option value="MO">Missouri
+          <option value="MT">Montana
+          <option value="NE">Nebraska
+          <option value="NV">Nevada
+          <option value="NH">New Hampshire
+          <option value="NJ">New Jersey
+          <option value="NM">New Mexico
+          <option value="NY">New York
+          <option value="NC">North Carolina
+          <option value="ND">North Dakota
+          <option value="OH">Ohio
+          <option value="OK">Oklahoma
+          <option value="OR">Oregon
+          <option value="PA">Pennsylvania
+          <option value="RI">Rhode Island
+          <option value="SC">South Carolina
+          <option value="SD">South Dakota
+          <option value="TN">Tennessee
+          <option value="TX">Texas
+          <option value="UT">Utah
+          <option value="VT">Vermont
+          <option value="VA">Virginia
+          <option value="WA">Washington
+          <option value="DC">Washington D.C.
+          <option value="WV">West Virginia
+          <option value="WI">Wisconsin
+          <option value="WY">Wyoming
+        </SELECT>
       </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.novice.$invalid }">
-      <label for="novice" class="col-md-3 control-label">Novice</label>
+      <label class="col-md-3 control-label">Novice</label>
       <div class="col-md-2">
-        <input name="novice" type="number" data-ng-model="novice" id="novice" value="20" min="0" step="1" class="form-control glowing-border" required>
+        <input name="novice" type="number" data-ng-model="novice" value="20" min="0" step="1" class="form-control glowing-border" required>
       </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.intermediate.$invalid }">
-      <label for="intermediate" class="col-md-3 control-label">Intermediate</label>
+      <label class="col-md-3 control-label">Intermediate</label>
       <div class="col-md-2">
-        <input name="intermediate" type="number" data-ng-model="intermediate" id="intermediate" value="20" min="0" step="1" class="form-control glowing-border" required>
+        <input name="intermediate" type="number" data-ng-model="intermediate" value="20" min="0" step="1" class="form-control glowing-border" required>
       </div>
     </div>
 
     <div class="form-group" ng-class="{ 'has-error' : submitted && eventForm.advanced.$invalid }">
-      <label for="advanced" class="col-md-3 control-label">Advanced</label>
+      <label class="col-md-3 control-label">Advanced</label>
       <div class="col-md-2">
-        <input name="advanced" type="number" data-ng-model="advanced" id="advanced" value="20" min="0" step="1" class="form-control glowing-border" required>
+        <input name="advanced" type="number" data-ng-model="advanced" value="20" min="0" step="1" class="form-control glowing-border" required>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="desc" class="col-md-3 control-label">Description</label>
+      <label class="col-md-3 control-label">Description</label>
       <div class="col-md-9">
-        <textarea name="desc" type="text" data-ng-model="desc" id="desc" class="form-control glowing-border" rows="4" placeholder="(optional)"></textarea>
+        <textarea name="desc" type="text" data-ng-model="desc" class="form-control glowing-border" rows="4" placeholder="(optional)"></textarea>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="fblink" class="col-md-3 control-label">Facebook Link</label>
+      <label class="col-md-3 control-label">Facebook Link</label>
       <div class="col-md-9">
-        <input name="fblink" type="url" data-ng-model="fblink" id="fblink" class="form-control glowing-border" placeholder="(optional)"></textarea>
+        <input name="fblink" type="url" data-ng-model="fblink" class="form-control glowing-border" placeholder="(optional)"></textarea>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="glink" class="col-md-3 control-label">Google+ Link</label>
+      <label class="col-md-3 control-label">Google+ Link</label>
       <div class="col-md-9">
-        <input name="glink" type="url" data-ng-model="glink" id="glink" class="form-control glowing-border" placeholder="(optional)"></textarea>
+        <input name="glink" type="url" data-ng-model="glink" class="form-control glowing-border" placeholder="(optional)"></textarea>
       </div>
     </div>
-    -->
 
     <div class="form-group">
       <div class="col-md-offset-3 col-md-9">
